02Jan22=======================================================================
1. Fix dx bug introduced to handle dx by ip <ipaddr> for webclusters.
2. Remove _add_thingy dbg message from general view.
3. Increase sh/ann cache to 130 to cope with some client programs' profligate
   need to fill their users' screens with needless erm... data. 
01Jan22=======================================================================
1. Fixed missing ';' in spoof
30Dec21=======================================================================
1. Try to fix (nuke) tabs in comment field.
28Dec21=======================================================================
1. Fix issues with wwv & wcy updates into the cache.
2. Add a simple sh/announce cache to stop spawning when used (especially) in
   a script.  
27Dec21=======================================================================
1. Fix "kwalitee control" issue in /spider/cmd/dx.pl.
2. Make sh/wcy and sh/wwv cacheble for simple queries.
3. Fix set/nodxxxxxx etc.
22Dec21=======================================================================
1. Add the possibility to do "sender verify" that spots (and later on, other
   things like announce etc) are coming from spotters that exist on the node
   that the PC11/61 says it does. At the moment, this is advisory as many
   users seem to be on web clusters and many of them do not send PC61 and also
   don't update the node's routing tables that normal node usage would do.
2. Prioritise PC61 spots over PC11 spots wherever possible. Also promote PC11
   spots to PC61 where the spotter's IP is known.
3. Add a shell script "perlbrew-dxspider" that can be used for starting the
   node when using perlbrew (i.e. more modern perls) on older distros such
   as Centos 7/8.
4. Allow to "dx by <spotter> ip <ip address> <qrg> <spot call> <comment>.
   This is added as a convenience measure for webcluster authors while waiting